--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
 
     steps:
@@ -17,7 +17,11 @@ jobs:
     - name: Set up Julia
       uses: julia-actions/setup-julia@v1
       with:
-        version: ['1.8', '1.9', '1.10', '1.11', 'latest']
+        version: 
+          - '1.8'
+          - '1.9'
+          - '1.10'
+          - '1.11'
 
     - name: Install dependencies
       run: |
