--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,25 +8,31 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Check out repository
-      uses: actions/checkout@v4
-
-    - name: Set up Julia
-      uses: julia-actions/setup-julia@v1
-      with:
-        version: 
+    name: Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }} - ${{ github.event_name }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        version:
           - '1.8'
           - '1.9'
           - '1.10'
           - '1.11'
+        os:
+          - ubuntu-latest
+        arch:
+          - x64
 
-    - name: Install dependencies
-      run: |
-        julia --project=. -e 'import Pkg; Pkg.instantiate()'
+    steps:
 
-    - name: Run tests
-      run: |
-        julia --project=. -e 'import Pkg; Pkg.test()'
+      - uses: actions/checkout@v4
+      - uses: julia-actions/cache@v1
+      - uses: julia-actions/julia-buildpkg@v1
+      - uses: julia-actions/julia-runtest@v1
+        env:
+            JULIA_NUM_THREADS: "4"
+      - uses: julia-actions/julia-processcoverage@v1
+      - uses: codecov/codecov-action@v4
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        with:
+          file: lcov.info
