--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,11 +13,11 @@ jobs:
     strategy:
       matrix:
         julia-version: ['lts', '1', 'pre']
-        julia-arch: [x64]#, x86]
-        os: [ubuntu-latest] #, windows-latest, macOS-latest]
-        #exclude:
-        #  - os: macOS-latest
-        #    julia-arch: x86
+        julia-arch: [x64, x86]
+        os: [ubuntu-latest, windows-latest, macOS-latest]
+        exclude:
+          - os: macOS-latest
+            julia-arch: x86
 
     steps:
 
