--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,7 @@ jobs:
       - uses: julia-actions/julia-runtest@v1
         env:
             JULIA_NUM_THREADS: "4"
+            JULIA_PKG_SERVER_REGISTRY_PREFERENCE: conservative
       - uses: julia-actions/julia-processcoverage@v1
       - uses: codecov/codecov-action@v5
         env:
